l2tp/iptables
# Generated by iptables-save v1.4.7 on Sat Jan  7 16:12:23 2017
*raw
:PREROUTING ACCEPT [8813731:2755638738]
:OUTPUT ACCEPT [5357479:4026906206]
COMMIT
# Completed on Sat Jan  7 16:12:23 2017
# Generated by iptables-save v1.4.7 on Sat Jan  7 16:12:23 2017
*mangle
:PREROUTING ACCEPT [8813731:2755638738]
:INPUT ACCEPT [6179012:900227973]
:FORWARD ACCEPT [2551067:1843454709]
:OUTPUT ACCEPT [5357479:4026906206]
:POSTROUTING ACCEPT [7908546:5870360915]
COMMIT
# Completed on Sat Jan  7 16:12:23 2017
# Generated by iptables-save v1.4.7 on Sat Jan  7 16:12:23 2017
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [1:128]
-A INPUT -i lo -j ACCEPT 
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 3306 -j DROP 
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT 
-A INPUT -p udp -m state --state NEW -m udp --dport 8989 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 8989 -j ACCEPT 
-A INPUT -p udp -m multiport --dports 500,4500,1701 -j ACCEPT 
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -p icmp -j ACCEPT 
-A INPUT -i lo -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 53 -j ACCEPT 
-A INPUT -p udp -m state --state NEW -m udp --dport 53 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 1194 -j ACCEPT 
-A INPUT -p udp -m state --state NEW -m udp --dport 1701 -j ACCEPT 
-A INPUT -p udp -m state --state NEW -m udp --dport 500 -j ACCEPT 
-A INPUT -p udp -m state --state NEW -m udp --dport 4500 -j ACCEPT 
-A INPUT -j REJECT --reject-with icmp-host-prohibited 
-A FORWARD -s 192.168.18.0/24 -j ACCEPT 
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A FORWARD -j REJECT --reject-with icmp-host-prohibited 
COMMIT
# Completed on Sat Jan  7 16:12:23 2017
# Generated by iptables-save v1.4.7 on Sat Jan  7 16:12:23 2017
*nat
:PREROUTING ACCEPT [741293:70503802]
:POSTROUTING ACCEPT [44389:3309368]
:OUTPUT ACCEPT [44389:3309368]
-A POSTROUTING -s 192.168.18.0/24 -j SNAT --to-source 45.125.17.10 
COMMIT
# Completed on Sat Jan  7 16:12:23 2017
